--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</li>
 		</ul>
 	</nav>
-	<header id="header" class="section" data-speed="6" data-type="background">
+	<header id="header" class="section" data-speed="8" data-type="background">
 		<div id="main-social">
 			<ul class="horiz-list">
 				<li>
@@ -200,9 +200,10 @@
 		</div>
 	</section>
 	<section id="archive" class="section divider">
+		<div class="bg-image" data-speed="6" data-type="background"></div>
 		<div class="wrapper">
 			<h1>Explore more examples of my work</h1>
-			<a href="#" class="btn"><i class="fa fa-archive"></i>Archive</a>
+			<a href="#" class="btn"><i class="fa fa-plus-circle"></i>Archive</a>
 		</div>
 	</section>
 	<section id="about" class="section">
@@ -217,10 +218,11 @@
 		</div>
 	</section>
 	<section id="resume" class="section divider">
-		<div class="wrapper">
-			<h1>Learn more about my experience</h1>
-			<a href="#" class="btn"><i class="fa fa-resume"></i>Resume</a>
-		</div>
+		<div class="bg-image" data-speed="6" data-type="background"></div>
+			<div class="wrapper">
+				<h1>Learn more about my experience</h1>
+				<a href="#" class="btn"><i class="fa fa-plus-circle"></i>Resume</a>
+			</div>
 	</section>
 	<section id="contact" class="section">
 		<h1 class="title">CONTACT</h1>
