--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="icon" href="img/favicon.ico">
+        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="styles/main.css">
-
+		
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		<script src="js/script.js"></script>
     </head>
@@ -39,7 +40,7 @@
 			</li>
 		</ul>
 	</nav>
-	<header id="header" class="section" data-speed="8" data-type="background">
+	<header id="header" class="section" data-speed="6" data-type="background">
 		<div id="main-social">
 			<ul class="horiz-list">
 				<li>
@@ -209,12 +210,12 @@
 	<section id="about" class="section">
 		<h1 class="title">ABOUT</h1>
 		<div class="wrapper">
-			<p>I enjoy exploring creative ways to create digital experiences that enhance meaning, motivation and context. I believe designers and developers are essential to storytelling and should be actively involved in the process &mdash; from planning to presentation.</p>
+			<p>I enjoy experimenting and exploring creative ways to create digital experiences that enhance meaning, motivation and context. I believe that designers and developers are essential to storytelling and should be actively involved in the process &mdash; from planning to presentation.</p>
 			<blockquote>
 				Based on strategy<br />
 				Driven by creativity
 			</blockquote>
-			<p>After six years of professional and student journalism experience, I am now enrolled at Coding Campus studying programming. I have worked as a designer and copy editor at the Orange County Register, Dallas Morning News and The Oklahoman. I graduated in 2012 from the University of Oklahoma and was editor-in-chief of the campus newspaper, The Oklahoma Daily.</p>
+			<p>After six years of professional and student journalism experience, I am now studying back-end development in Utah. Before I transitioned to web development, I was a designer at the Orange County Register. I also have worked as an online editor at The Oklahoman and a copy editor at the Dallas Morning News. I graduated in 2012 from the University of Oklahoma and was editor-in-chief of the campus newspaper, The Oklahoma Daily. My college newsroom is where I was introduced to the power of design and began to learn how storytelling goes far beyond the narrative.</p>
 		</div>
 	</section>
 	<section id="resume" class="section divider">
