--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			</ul>
 		</div>
 		<div class="wrapper">
-			<h3>I'm Chris. I like telling stories.</h3>
+			<h3>Hi, I'm Chris. I like telling stories.</h3>
 			<img src="pic.jpg" alt="">
 			<h1>
 				Designer<span>.</span><br />
@@ -215,7 +215,7 @@
 				Based on strategy<br />
 				Driven by creativity
 			</blockquote>
-			<p>After six years of professional and student journalism experience, I am now studying back-end development in Utah. Before I transitioned to web development, I was a designer at the Orange County Register. I also have worked as an online editor at The Oklahoman and a copy editor at the Dallas Morning News. I graduated in 2012 from the University of Oklahoma and was editor-in-chief of the campus newspaper, The Oklahoma Daily. My college newsroom is where I was introduced to the power of design and began to learn how storytelling goes far beyond the narrative.</p>
+			<p>I have worked as a print and digital designer at the Orange County Register, an online editor at The Oklahoman, and a copy editor at the Dallas Morning News. I graduated in 2012 from the University of Oklahoma, where I was editor of the campus newspaper, The Oklahoma Daily. This job introduced me to the visual side of journalism, and I became enthralled with the power of design. I began teaching myself web design in my free time after graduation and, since then, my interest level has grown so much that I am now studying programming at Coding Campus.</p>
 		</div>
 	</section>
 	<section id="resume" class="section divider">
