correct img styles

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		</div>
 		<div class="wrapper">
 			<h3>Hi, I'm Chris. I like telling stories.</h3>
-			<img src="pic.jpg" alt="">
+			<img src="http://placehold.it/415x175&text=my+photo">
 			<h1>
 				Designer<span>.</span><br />
 				Journalist<span>.</span><br />
@@ -73,7 +73,7 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="pic.jpg">
+								<img src="http://placehold.it/420x500&text=image">
 							</div>
 							<div class="info-wrap">
 								<span></span>
@@ -89,7 +89,7 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="pic.jpg">
+								<img src="http://placehold.it/420x500&text=image">
 							</div>
 							<div class="info-wrap">
 								<span></span>
@@ -105,7 +105,7 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="pic.jpg">
+								<img src="http://placehold.it/420x500&text=image">
 							</div>
 							<div class="info-wrap">
 								<span></span>
@@ -121,7 +121,7 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="pic.jpg">
+								<img src="http://placehold.it/420x500&text=image">
 							</div>
 							<div class="info-wrap">
 								<span></span>
@@ -137,7 +137,7 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="pic.jpg">
+								<img src="http://placehold.it/420x500&text=image">
 							</div>
 							<div class="info-wrap">
 								<span></span>
@@ -153,7 +153,7 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="pic.jpg">
+								<img src="http://placehold.it/420x500&text=image">
 							</div>
 							<div class="info-wrap">
 								<span></span>
@@ -169,7 +169,7 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="pic.jpg">
+								<img src="http://placehold.it/420x500&text=image">
 							</div>
 							<div class="info-wrap">
 								<span></span>
@@ -185,7 +185,7 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="pic.jpg">
+								<img src="http://placehold.it/420x500&text=image">
 							</div>
 							<div class="info-wrap">
 								<span></span>
