update portfolio thumbs

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="http://placehold.it/420x500&text=image">
+								<img src="img/portfolio/thumb/ocr_2013-10-3.jpg" alt="">
 							</div>
 							<div class="info-wrap">
 								<span></span>
 								<div class="info">
-									<h4>Design Type</h4>
-									<p>Orange County Register</p>
+									<h4>Front page</h4>
+									<p>Orange County Register, 2013</p>
 								</div>
 							</div>
 						</article>
@@ -89,13 +89,13 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="http://placehold.it/420x500&text=image">
+								<img src="img/portfolio/thumb/hsc-info_2012.jpg" alt="">
 							</div>
 							<div class="info-wrap">
 								<span></span>
 								<div class="info">
-									<h4>Design Type</h4>
-									<p>Orange County Register</p>
+									<h4>Infographic</h4>
+									<p>Sower Magazine, 2012</p>
 								</div>
 							</div>
 						</article>
@@ -105,13 +105,13 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="http://placehold.it/420x500&text=image">
+								<img src="img/portfolio/thumb/ocr_2013-8-1.jpg" alt="">
 							</div>
 							<div class="info-wrap">
 								<span></span>
 								<div class="info">
-									<h4>Design Type</h4>
-									<p>Orange County Register</p>
+									<h4>Front page</h4>
+									<p>Orange County Register, 2013</p>
 								</div>
 							</div>
 						</article>
@@ -121,13 +121,13 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="http://placehold.it/420x500&text=image">
+								<img src="img/portfolio/thumb/ocr_2013-9-5.jpg" alt="">
 							</div>
 							<div class="info-wrap">
 								<span></span>
 								<div class="info">
-									<h4>Design Type</h4>
-									<p>Orange County Register</p>
+									<h4>Sports cover</h4>
+									<p>Orange County Register, 2013</p>
 								</div>
 							</div>
 						</article>
@@ -137,13 +137,13 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="http://placehold.it/420x500&text=image">
+								<img src="img/portfolio/thumb/ocr_2013-5-10.jpg" alt="">
 							</div>
 							<div class="info-wrap">
 								<span></span>
 								<div class="info">
-									<h4>Design Type</h4>
-									<p>Orange County Register</p>
+									<h4>Front page</h4>
+									<p>Orange County Register, 2013</p>
 								</div>
 							</div>
 						</article>
@@ -153,13 +153,13 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="http://placehold.it/420x500&text=image">
+								<img src="img/portfolio/thumb/oud_2012-5-7.jpg" alt="">
 							</div>
 							<div class="info-wrap">
 								<span></span>
 								<div class="info">
-									<h4>Design Type</h4>
-									<p>Orange County Register</p>
+									<h4>Opinion page</h4>
+									<p>Oklahoma Daily, 2012</p>
 								</div>
 							</div>
 						</article>
@@ -169,13 +169,13 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="http://placehold.it/420x500&text=image">
+								<img src="img/portfolio/thumb/oud_2010-10-5.jpg" alt="">
 							</div>
 							<div class="info-wrap">
 								<span></span>
 								<div class="info">
-									<h4>Design Type</h4>
-									<p>Orange County Register</p>
+									<h4>Sports cover</h4>
+									<p>Oklahoma Daily, 2010</p>
 								</div>
 							</div>
 						</article>
@@ -185,13 +185,13 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="http://placehold.it/420x500&text=image">
+								<img src="img/portfolio/thumb/ocr_2013-11-7.jpg" alt="">
 							</div>
 							<div class="info-wrap">
 								<span></span>
 								<div class="info">
-									<h4>Design Type</h4>
-									<p>Orange County Register</p>
+									<h4>Front page</h4>
+									<p>Orange County Register, 2013</p>
 								</div>
 							</div>
 						</article>
