correct thumb overlay

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 	<section id="archive" class="section divider">
 		<div class="bg-image" data-speed="6" data-type="background"></div>
 		<div class="wrapper">
-			<h1>Explore more examples of my work</h1>
+			<h1>See more examples of my work</h1>
 			<a href="#" class="btn"><i class="fa fa-plus-circle"></i>Archive</a>
 		</div>
 	</section>
