add resume page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script src="js/script.js"></script></head>
-<body class="">
+<body class="index">
 	<nav id="main-nav">
 	<a id="menu" class="">
 		<div>
@@ -25,7 +25,7 @@
 	</a>
 	<ul class="">
 		<li>
-			<a href="#header">HOME</a>
+			<a href="#home">HOME</a>
 		</li>
 		<li>
 			<a href="#portfolio">PORTFOLIO</a>
@@ -37,7 +37,7 @@
 			<a href="#contact">CONTACT</a>
 		</li>
 	</ul>
-</nav>	<header id="header" class="section" data-speed="6" data-type="background">
+</nav>	<header id="home" class="section" data-speed="6" data-type="background">
 		<div id="main-social">
 			<ul class="horiz-list">
 				<li>
@@ -207,7 +207,7 @@
 	<section id="about" class="section">
 		<h1 class="title">ABOUT</h1>
 		<div class="wrapper">
-			<p>I enjoy experimenting and exploring creative ways to create digital experiences that enhance meaning, motivation and context. I believe that designers and developers are essential to storytelling and should be actively involved in the process &mdash; from planning to presentation.</p>
+			<p>I like to explore ways to create experiences that enhance meaning, motivation and context. I believe that designers and developers are essential to storytelling and should be actively involved in the process &mdash; from planning to presentation.</p>
 			<blockquote>
 				Based on strategy<br />
 				Driven by creativity
@@ -219,7 +219,7 @@
 		<div class="bg-image" data-speed="6" data-type="background"></div>
 			<div class="wrapper">
 				<h1>Learn more about my experience</h1>
-				<a href="#" class="btn"><i class="fa fa-plus-circle"></i>Resume</a>
+				<a href="resume.html" class="btn"><i class="fa fa-plus-circle"></i>Resume</a>
 			</div>
 	</section>
 	<section id="contact" class="section">
