picture edits, resume fix

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		</div>
 		<div class="wrapper">
 			<h3>Hi, I'm Chris. I like telling stories.</h3>
-			<img src="http://placehold.it/415x175&text=my+photo">
+			<img src="img/lusk-main.jpg">
 			<h1>
 				Designer<span>.</span><br />
 				Journalist<span>.</span><br />
