--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>chrislusk.me | REDESIGN</title>
 <meta name="description" content="Chris Lusk | Designer, Journalist, Developer">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="icon" href="img/favicon.ico">
+
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900' rel='stylesheet' type='text/css'>
+
 <link rel="stylesheet" href="styles/main.css">
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script src="js/script.js"></script></head>
+<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script></head>
 <body class="index">
 	<nav id="main-nav">
 	<a id="menu" class="">
@@ -37,8 +38,14 @@
 			<a href="#contact">CONTACT</a>
 		</li>
 	</ul>
-</nav>	<header id="home" class="section" data-speed="6" data-type="background">
-		<div id="main-social">
+</nav>	<header id="home" class="section"
+		data--60p-top="background-color: rgb(237,237,254)"
+		data-center-bottom="background-color: rgb(210,210,249)"
+	>
+		<div id="main-social"
+			data-40-top="margin-top: 0px"
+			data--500-top="margin-top: 300px"
+		>
 			<ul class="horiz-list">
 				<li>
 					<a href="http://twitter.com/chrismlusk" target="_blank">
@@ -53,9 +60,18 @@
 			</ul>
 		</div>
 		<div class="wrapper">
-			<h3>Hi, I'm Chris. I like telling stories.</h3>
-			<img src="img/lusk-main.jpg">
-			<h1>
+			<h3
+				data-40-top="margin-top: 40px"
+				data--500-top="margin-top: 300px"
+			>Hi, I'm Chris. I like telling stories.</h3>
+			<img src="img/lusk-main.jpg"
+				data-80-top="margin-top: 0px; opacity[swing]: 1"
+				data--300-top="margin-top: 20px; opacity[swing]: 1"
+			>
+			<h1
+				data-40-top="margin-top: 0px; line-height: 70px; opacity[swing]: 1"
+				data--650-top="margin-top: 180px; line-height: 90px; opacity[swing]: 0"
+			>
 				Designer<span>.</span><br />
 				Journalist<span>.</span><br />
 				Developer<span>.</span><br />
@@ -198,7 +214,6 @@
 		</div>
 	</section>
 	<section id="archive" class="section divider">
-		<div class="bg-image" data-speed="6" data-type="background"></div>
 		<div class="wrapper">
 			<h1>See more examples of my work</h1>
 			<a href="#" class="btn"><i class="fa fa-plus-circle"></i>Archive</a>
@@ -208,24 +223,29 @@
 		<h1 class="title">ABOUT</h1>
 		<div class="wrapper">
 			<p>I like to explore ways to create experiences that enhance meaning, motivation and context. I believe that designers and developers are essential to storytelling and should be actively involved in the process &mdash; from planning to presentation.</p>
-			<blockquote>
-				Based on strategy<br />
+			<blockquote
+				data-100-bottom="transform[swing]: scale(0.5); opacity: 0"
+				data--100-bottom="transform[swing]: scale(1); opacity: 1"
+			>
+				Focused on strategy<br />
 				Driven by creativity
 			</blockquote>
-			<p>I have worked as a print and digital designer at the Orange County Register, an online editor at The Oklahoman, and a copy editor at the Dallas Morning News. I graduated in 2012 from the University of Oklahoma, where I was editor of the campus newspaper, The Oklahoma Daily. This job introduced me to the visual side of journalism, and I became enthralled with the power of design. I began teaching myself web design in my free time after graduation and, since then, my interest level has grown so much that I am now studying programming at Coding Campus.</p>
+			<p>I have worked as a print and digital designer at the Orange County Register, an online editor at The Oklahoman, and a copy editor at the Dallas Morning News. I graduated in 2012 from the University of Oklahoma, where I was editor of the campus newspaper, The Oklahoma Daily. This job introduced me to the visual side of journalism, and I became enthralled with the power of design. I began teaching myself web design and programming in my free time after I graduated and, since then, I have begun working toward career where I can combine my love for all three things: design, journalism and development.</p>
 		</div>
 	</section>
 	<section id="resume" class="section divider">
-		<div class="bg-image" data-speed="6" data-type="background"></div>
-			<div class="wrapper">
-				<h1>Learn more about my experience</h1>
-				<a href="resume.html" class="btn"><i class="fa fa-plus-circle"></i>Resume</a>
-			</div>
+		<div class="wrapper">
+			<h1>Learn more about my experience</h1>
+			<a href="resume.html" class="btn"><i class="fa fa-plus-circle"></i>Resume</a>
+		</div>
 	</section>
 	<section id="contact" class="section">
 		<h1 class="title">CONTACT</h1>
-		<div class="wrapper">
-			<h3>chrismlusk@gmail.com</h3>
+		<div class="wrapper"
+			data-100-bottom="transform[swing]: scale(0.5); opacity: 0"
+			data--100-bottom="transform[swing]: scale(1); opacity: 1"
+		>
+			<h3><a href="mailto:chrismlusk@gmail.com?subject=From%20Your%20Website">chrismlusk@gmail.com</a></h3>
 			<ul class="horiz-list">
 				<li>
 					<a href="http://twitter.com/chrismlusk" target="_blank">
@@ -264,5 +284,68 @@
 	<div class="wrapper">
 		<p>Chris Lusk &copy; 2014</p>
 	</div>
-</footer></body>
+</footer>	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+<script type="text/javascript" src="js/enquire.min.js"></script>
+<script type="text/javascript" src="js/skrollr.min.js"></script>
+<script type="text/javascript">
+    var s = skrollr.init({
+        forceHeight: false
+    });
+</script>
+
+<script src="js/plugins.js"></script>
+<script src="js/main.js"></script>
+
+<!-- SMOOTH SCROLL -->
+<script>
+	$(document).ready(function() {
+	  function filterPath(string) {
+	  return string
+	    .replace(/^\//,'')
+	    .replace(/(index|default).[a-zA-Z]{3,4}$/,'')
+	    .replace(/\/$/,'');
+	  }
+	  var locationPath = filterPath(location.pathname);
+	  var scrollElem = scrollableElement('html', 'body');
+	 
+	  $('a[href*=#]').each(function() {
+	    var thisPath = filterPath(this.pathname) || locationPath;
+	    if (  locationPath == thisPath
+	    && (location.hostname == this.hostname || !this.hostname)
+	    && this.hash.replace(/#/,'') ) {
+	      var $target = $(this.hash), target = this.hash;
+	      if (target) {
+	        var targetOffset = $target.offset().top;
+	        $(this).click(function(event) {
+	          event.preventDefault();
+	          $(scrollElem).animate({scrollTop: targetOffset}, 1600, function() {
+	            location.hash = target;
+	          });
+	        });
+	      }
+	    }
+	  });
+	 
+	  // use the first element that is "scrollable"
+	  function scrollableElement(els) {
+	    for (var i = 0, argLength = arguments.length; i <argLength; i++) {
+	      var el = arguments[i],
+	          $scrollElement = $(el);
+	      if ($scrollElement.scrollTop()> 0) {
+	        return el;
+	      } else {
+	        $scrollElement.scrollTop(1);
+	        var isScrollable = $scrollElement.scrollTop()> 0;
+	        $scrollElement.scrollTop(0);
+	        if (isScrollable) {
+	          return el;
+	        }
+	      }
+	    }
+	    return [];
+	  }
+	 
+	});
+</script></body>
 </html>
