--- a/resume.html
+++ b/resume.html
@@ -4,17 +4,18 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>chrislusk.me | REDESIGN</title>
 <meta name="description" content="Chris Lusk | Designer, Journalist, Developer">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="icon" href="img/favicon.ico">
+
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900' rel='stylesheet' type='text/css'>
+
 <link rel="stylesheet" href="styles/main.css">
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script src="js/script.js"></script></head>
+<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script></head>
 <body class="resume">
 	<div class="section">
 		<div class="wrapper">
