modifying portfolio ing actions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="description" content="Chris Lusk | Designer, Journalist, Developer">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="icon" href="img/favicon.ico">
+<link rel="icon" href="img/favicon.png">
 
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900' rel='stylesheet' type='text/css'>
 
@@ -101,7 +101,7 @@
 				<li class="work">
 					<a href="#">
 						<article>
-							<div class="image">
+							<div class="image clip02">
 								<img src="img/portfolio/thumb/hsc-info_2012.jpg" alt="">
 							</div>
 							<div class="info-wrap">
@@ -239,12 +239,12 @@
 			<a href="resume.html" class="btn"><i class="fa fa-plus-circle"></i>Resume</a>
 		</div>
 	</section>
-	<section id="contact" class="section">
+	<section id="contact" class="section"
+		data-bottom-top="background-position: 50% 600%"
+		data-center="background-position: 50% 350%"
+	>
 		<h1 class="title">CONTACT</h1>
-		<div class="wrapper"
-			data-100-bottom="transform[swing]: scale(0.5); opacity: 0"
-			data--100-bottom="transform[swing]: scale(1); opacity: 1"
-		>
+		<div class="wrapper">
 			<h3><a href="mailto:chrismlusk@gmail.com?subject=From%20Your%20Website">chrismlusk@gmail.com</a></h3>
 			<ul class="horiz-list">
 				<li>
@@ -259,12 +259,7 @@
 				</li>
 				<li>
 					<a href="#" target="_blank">
-						<i class="fa fa-instagram"></i>
-					</a>
-				</li>
-				<li>
-					<a href="#" target="_blank">
-						<i class="fa fa-google-plus"></i>
+						<i class="fa fa-dribbble"></i>
 					</a>
 				</li>
 				<li>
@@ -274,17 +269,20 @@
 				</li>
 				<li>
 					<a href="#" target="_blank">
+						<i class="fa fa-instagram"></i>
+					</a>
+				</li>
+				<li>
+					<a href="#" target="_blank">
 						<i class="fa fa-linkedin"></i>
 					</a>
 				</li>
 			</ul>
 		</div>
-	</section>
-	<footer id="footer" class="section">
-	<div class="wrapper">
-		<p>Chris Lusk &copy; 2014</p>
-	</div>
-</footer>	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<footer id="footer">
+		<p>Chris Lusk &copy; 2014. All rights reserved.</p>
+</footer>	</section>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
 <script type="text/javascript" src="js/enquire.min.js"></script>
 <script type="text/javascript" src="js/skrollr.min.js"></script>
