modify portfolio thumbs

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<li class="work">
 					<a href="#">
 						<article>
-							<div class="image clip02">
+							<div class="image">
 								<img src="img/portfolio/thumb/hsc-info_2012.jpg" alt="">
 							</div>
 							<div class="info-wrap">
@@ -240,9 +240,9 @@
 		</div>
 	</section>
 	<section id="contact" class="section"
-		data-bottom-top="background-position: 50% 600%"
-		data-center="background-position: 50% 350%"
-	>
+		data-bottom-top="background-position: 50% 350%"
+		data-center="background-position: 50% 175%" >
+
 		<h1 class="title">CONTACT</h1>
 		<div class="wrapper">
 			<h3><a href="mailto:chrismlusk@gmail.com?subject=From%20Your%20Website">chrismlusk@gmail.com</a></h3>
