--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="img/portfolio/thumb/ocr_2013-10-3.jpg" alt="">
+								<img src="portfolio/img/thumb/featured/ocr_2013-10-3.jpg" alt="">
 							</div>
 							<div class="info-wrap">
 								<span></span>
@@ -102,7 +102,7 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="img/portfolio/thumb/hsc-info_2012.jpg" alt="">
+								<img src="portfolio/img/thumb/featured/hsc-info_2012.jpg" alt="">
 							</div>
 							<div class="info-wrap">
 								<span></span>
@@ -118,7 +118,7 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="img/portfolio/thumb/ocr_2013-8-1.jpg" alt="">
+								<img src="portfolio/img/thumb/featured/ocr_2013-8-1.jpg" alt="">
 							</div>
 							<div class="info-wrap">
 								<span></span>
@@ -134,7 +134,7 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="img/portfolio/thumb/ocr_2013-9-5.jpg" alt="">
+								<img src="portfolio/img/thumb/featured/ocr_2013-9-5.jpg" alt="">
 							</div>
 							<div class="info-wrap">
 								<span></span>
@@ -150,7 +150,7 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="img/portfolio/thumb/ocr_2013-5-10.jpg" alt="">
+								<img src="portfolio/img/thumb/featured/ocr_2013-5-10.jpg" alt="">
 							</div>
 							<div class="info-wrap">
 								<span></span>
@@ -166,7 +166,7 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="img/portfolio/thumb/oud_2012-5-7.jpg" alt="">
+								<img src="portfolio/img/thumb/featured/oud_2012-5-7.jpg" alt="">
 							</div>
 							<div class="info-wrap">
 								<span></span>
@@ -182,7 +182,7 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="img/portfolio/thumb/oud_2010-10-5.jpg" alt="">
+								<img src="portfolio/img/thumb/featured/oud_2010-10-5.jpg" alt="">
 							</div>
 							<div class="info-wrap">
 								<span></span>
@@ -198,7 +198,7 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="img/portfolio/thumb/ocr_2013-11-7.jpg" alt="">
+								<img src="portfolio/img/thumb/featured/ocr_2013-11-7.jpg" alt="">
 							</div>
 							<div class="info-wrap">
 								<span></span>
@@ -216,7 +216,7 @@
 	<section id="archive" class="section divider">
 		<div class="wrapper">
 			<h1>See more examples of my work</h1>
-			<a href="#" class="btn"><i class="fa fa-plus-circle"></i>Archive</a>
+			<a href="/portfolio" class="btn"><i class="fa fa-plus-circle"></i>Archive</a>
 		</div>
 	</section>
 	<section id="about" class="section">
