applying media queries

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>chrislusk.me | REDESIGN</title>
 <meta name="description" content="Chris Lusk | Designer, Journalist, Developer">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
 <link rel="icon" href="img/favicon.png">
 
@@ -215,7 +215,7 @@
 	</section>
 	<section id="archive" class="section divider">
 		<div class="wrapper">
-			<h1>See more examples of my work</h1>
+			<h1>More examples of my work</h1>
 			<a href="/portfolio" class="btn"><i class="fa fa-plus-circle"></i>Archive</a>
 		</div>
 	</section>
@@ -235,7 +235,7 @@
 	</section>
 	<section id="resume" class="section divider">
 		<div class="wrapper">
-			<h1>Learn more about my experience</h1>
+			<h1>More about my experience</h1>
 			<a href="/img/resume-2014.pdf" target="_blank" class="btn"><i class="fa fa-plus-circle"></i>Resume</a>
 		</div>
 	</section>
