--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>chrislusk.me | REDESIGN</title>
 <meta name="description" content="Chris Lusk | Designer, Journalist, Developer">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
 <link rel="icon" href="img/favicon.png">
 
@@ -26,7 +26,7 @@
 		</a>
 		<ul class="">
 			<li>
-				<a href="index.html#home">HOME</a>
+				<a href="index.html">HOME</a>
 			</li>
 			<li>
 				<a href="index.html#portfolio">PORTFOLIO</a>
@@ -49,38 +49,6 @@
 						<article>
 							<div class="image">
 								<img src="portfolio/img/thumb/ocr_2013-11-29.jpg" alt="">
-							</div>
-							<div class="info-wrap">
-								<span></span>
-								<div class="info">
-									<h4>Front page</h4>
-									<p>Orange County Register, 2013</p>
-								</div>
-							</div>
-						</article>
-					</a>
-				</li>
-				<li class="work">
-					<a href="#">
-						<article>
-							<div class="image">
-								<img src="portfolio/img/thumb/ocr_2013-11-13.jpg" alt="">
-							</div>
-							<div class="info-wrap">
-								<span></span>
-								<div class="info">
-									<h4>Focus page</h4>
-									<p>Orange County Register, 2013</p>
-								</div>
-							</div>
-						</article>
-					</a>
-				</li>
-				<li class="work">
-					<a href="#">
-						<article>
-							<div class="image">
-								<img src="portfolio/img/thumb/ocr_2013-11-11.jpg" alt="">
 							</div>
 							<div class="info-wrap">
 								<span></span>
@@ -288,22 +256,6 @@
 					<a href="#">
 						<article>
 							<div class="image">
-								<img src="portfolio/img/thumb/oud_2012-4-25.jpg" alt="">
-							</div>
-							<div class="info-wrap">
-								<span></span>
-								<div class="info">
-									<h4>Illustration</h4>
-									<p>The Oklahoma Daily, 2012</p>
-								</div>
-							</div>
-						</article>
-					</a>
-				</li>
-				<li class="work">
-					<a href="#">
-						<article>
-							<div class="image">
 								<img src="portfolio/img/thumb/oud_2012-3-7.jpg" alt="">
 							</div>
 							<div class="info-wrap">
@@ -326,22 +278,6 @@
 								<span></span>
 								<div class="info">
 									<h4>Sports cover</h4>
-									<p>The Oklahoma Daily, 2011</p>
-								</div>
-							</div>
-						</article>
-					</a>
-				</li>
-				<li class="work">
-					<a href="#">
-						<article>
-							<div class="image">
-								<img src="portfolio/img/thumb/oud-2011-11-22.jpg" alt="">
-							</div>
-							<div class="info-wrap">
-								<span></span>
-								<div class="info">
-									<h4>Sports spread</h4>
 									<p>The Oklahoma Daily, 2011</p>
 								</div>
 							</div>
