--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if lt IE 9]>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
+<![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -16,15 +19,15 @@
 <link rel="stylesheet" href="styles/main.css">
 
 <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script></head>
-<body class="index">
+<body>
 	<nav id="main-nav">
-	<a id="menu" class="">
+	<a id="menu">
 		<div>
 			<span class="bars">
 			</span>
 		</div>
 	</a>
-	<ul class="">
+	<ul>
 		<li>
 			<a href="#home">HOME</a>
 		</li>
@@ -38,7 +41,36 @@
 			<a href="#contact">CONTACT</a>
 		</li>
 	</ul>
-</nav>	<header id="home" class="section"
+</nav>	<nav id="mobile-nav">
+		<ul>
+			<li>
+				<a href="#home">
+					<i class="fa fa-home"></i>
+					HOME
+				</a>
+			</li>
+			<li>
+				<a href="#portfolio">
+					<i class="fa fa-star"></i>
+					PORTFOLIO
+				</a>
+			</li>
+			<li>
+				<a href="#about">
+					<i class="fa fa-user"></i>
+					ABOUT
+				</a>
+			</li>
+			<li>
+				<a href="#contact">
+					<i class="fa fa-email"></i>
+					CONTACT
+				</a>
+			</li>
+		</ul>
+	</nav>
+
+	<header id="home" class="section"
 		data--60p-top="background-color: rgb(237,237,254)"
 		data-center-bottom="background-color: rgb(210,210,249)"
 	>
@@ -69,12 +101,21 @@
 				data--300-top="margin-top: 20px; opacity[swing]: 1"
 			>
 			<h1
-				data-40-top="margin-top: 0px; line-height: 70px; opacity[swing]: 1"
-				data--650-top="margin-top: 180px; line-height: 90px; opacity[swing]: 0"
+				data-40-top="margin-top: 0px; opacity[swing]: 1"
+				data--650-top="margin-top: 180px; opacity[swing]: 0"
 			>
-				Designer<span>.</span><br />
-				Journalist<span>.</span><br />
-				Developer<span>.</span><br />
+				<span>Designer</span>
+				<span>Journalist</span>
+				<span>Developer</span>
+			</h1>
+		</div>
+		<div class="wrapper-mobile">
+			<h3>Hi, I'm Chris. I like telling stories.</h3>
+			<img src="img/lusk-main.jpg">
+			<h1>
+				<span>Designer</span>
+				<span>Journalist</span>
+				<span>Developer</span>
 			</h1>
 		</div>
 	</header>
@@ -317,7 +358,7 @@
 	        var targetOffset = $target.offset().top;
 	        $(this).click(function(event) {
 	          event.preventDefault();
-	          $(scrollElem).animate({scrollTop: targetOffset}, 1600, function() {
+	          $(scrollElem).animate({scrollTop: targetOffset}, 1400, function() {
 	            location.hash = target;
 	          });
 	        });
