--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <meta name="description" content="Chris Lusk | Designer, Journalist, Developer">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
-<link rel="icon" href="img/favicon.png">
+<link rel="icon" href="/img/favicon.png">
 
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900' rel='stylesheet' type='text/css'>
 
-<link rel="stylesheet" href="styles/main.css">
+<link rel="stylesheet" href="/styles/main.css">
 
-<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script></head>
+<script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script></head>
 <body>
 	<nav id="main-nav">
 	<a id="menu">
@@ -72,8 +72,7 @@
 
 	<header id="home" class="section"
 		data--60p-top="background-color: rgb(237,237,254)"
-		data-center-bottom="background-color: rgb(210,210,249)"
-	>
+		data-center-bottom="background-color: rgb(210,210,249)" >
 		<div id="main-social"
 			data-40-top="margin-top: 0px"
 			data--500-top="margin-top: 300px"
@@ -124,7 +123,7 @@
 		<div class="wrapper">
 			<ul id="grid">
 				<li class="work">
-					<a href="#">
+					<a href="portfolio/clips/price-to-play.html">
 						<article>
 							<div class="image">
 								<img src="portfolio/img/thumb/featured/ocr_2013-10-3.jpg" alt="">
@@ -140,7 +139,7 @@
 					</a>
 				</li>
 				<li class="work">
-					<a href="#">
+					<a href="portfolio/clips/student-demographics.html">
 						<article>
 							<div class="image">
 								<img src="portfolio/img/thumb/featured/hsc-info_2012.jpg" alt="">
@@ -156,7 +155,7 @@
 					</a>
 				</li>
 				<li class="work">
-					<a href="#">
+					<a href="portfolio/clips/design-to-minimize-crime.html">
 						<article>
 							<div class="image">
 								<img src="portfolio/img/thumb/featured/ocr_2013-8-1.jpg" alt="">
@@ -172,7 +171,7 @@
 					</a>
 				</li>
 				<li class="work">
-					<a href="#">
+					<a href="portfolio/clips/2013-football-preview.html">
 						<article>
 							<div class="image">
 								<img src="portfolio/img/thumb/featured/ocr_2013-9-5.jpg" alt="">
@@ -188,7 +187,7 @@
 					</a>
 				</li>
 				<li class="work">
-					<a href="#">
+					<a href="portfolio/clips/missing-pieces.html">
 						<article>
 							<div class="image">
 								<img src="portfolio/img/thumb/featured/ocr_2013-5-10.jpg" alt="">
@@ -204,7 +203,7 @@
 					</a>
 				</li>
 				<li class="work">
-					<a href="#">
+					<a href="portfolio/clips/alphabet-of-issues.html">
 						<article>
 							<div class="image">
 								<img src="portfolio/img/thumb/featured/oud_2012-5-7.jpg" alt="">
@@ -220,7 +219,7 @@
 					</a>
 				</li>
 				<li class="work">
-					<a href="#">
+					<a href="portfolio/clips/ou-texas-preview.html">
 						<article>
 							<div class="image">
 								<img src="portfolio/img/thumb/featured/oud_2010-10-5.jpg" alt="">
@@ -236,7 +235,7 @@
 					</a>
 				</li>
 				<li class="work">
-					<a href="#">
+					<a href="portfolio/clips/tall-order.html">
 						<article>
 							<div class="image">
 								<img src="portfolio/img/thumb/featured/ocr_2013-11-7.jpg" alt="">
@@ -325,16 +324,16 @@
 </footer>	</section>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-<script type="text/javascript" src="js/enquire.min.js"></script>
-<script type="text/javascript" src="js/skrollr.min.js"></script>
+<script type="text/javascript" src="/js/enquire.min.js"></script>
+<script type="text/javascript" src="/js/skrollr.min.js"></script>
 <script type="text/javascript">
     var s = skrollr.init({
         forceHeight: false
     });
 </script>
 
-<script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
+<script src="/js/plugins.js"></script>
+<script src="/js/main.js"></script>
 
 <!-- SMOOTH SCROLL -->
 <script>
