--- a/portfolio/clips/more-than-a-housing-issue.html
+++ b/portfolio/clips/more-than-a-housing-issue.html
@@ -3,19 +3,18 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<head><meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>chrislusk.me | REDESIGN</title>
+<head><meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta charset="utf-8">
+<title>chrislusk.me | TEST</title>
 <meta name="description" content="Chris Lusk | Designer, Journalist, Developer">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-
-<link rel="icon" href="/img/favicon.png">
-
-<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900' rel='stylesheet' type='text/css'>
-
-<link rel="stylesheet" href="/styles/main.css">
-
-<script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script></head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="styles/main.css">
+<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
+<!--[if lt IE 9]>
+<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+<![endif]-->
+<link rel="icon" href="img/favicon.ico"></head>
 <body class="inside">
 	<nav id="mobile-nav">
 		<ul>
@@ -85,16 +84,15 @@
 			</div>
 		</div>
 	</section>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-<script type="text/javascript" src="/js/enquire.min.js"></script>
-<script type="text/javascript" src="/js/skrollr.min.js"></script>
-<script type="text/javascript">
+<script src="/js/enquire.min.js"></script>
+<script src="/js/skrollr.min.js"></script>
+<script>
     var s = skrollr.init({
         forceHeight: false
     });
 </script>
-
 <script src="/js/plugins.js"></script>
 <script src="/js/main.js"></script>
 
