Reformat head and add og tags

--- a/projects.html
+++ b/projects.html
@@ -1,118 +1,120 @@
 <!doctype html>
-<html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Projects | chrislusk.me</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--[if IE]><link rel="shortcut icon" href="/favicon.ico"><![endif]-->
-		<link rel="shortcut icon" href="/favicon.png">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/normalize.css">
-        <!-- <link rel="stylesheet" href="css/main-min.css"> -->
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <span class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</span>
-        <![endif]-->
+<html lang="en">
+<head>
 
-        <header class="mini-nav">
-            <a href="/">chrislusk.me</a>
-        </header>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <main>
-            <!-- project promos -->
-            <section id="projects" class="wrapper">
-                <h1>Recent projects</h1>
+  <title>Projects | Chris Lusk | chrislusk.me</title>
+  <meta name="description" content="Chris Lusk is a web developer living and working in Chicago. This is his portfolio.">
 
-                <!-- Friendship Madness -->
-                <div class="item">
-                    <a href="http://friendshipmadness.com/" target="_blank">
-                        <img src="img/friendshipmadness.jpg" alt="Friendship Madness image" />
-                        <h3>Friendship Madness</h3>
-                    </a>
-                    <p>Some friends and I turn the NCAA basketball tournament into a silly joke each year. I built this site before the 2016 tournament.</p>
-                    <span class="skills">Skills</span>
-                    <ul class="tags">
-                        <li>HTML/CSS</li>
-                        <li>PHP</li>
-                        <li>WordPress</li>
-                        <li>Logo design</li>
-                    </ul>
-                </div>
+  <meta property="og:url" content="http://www.chrislusk.me" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Chris Lusk | chrislusk.me" />
+  <meta property="og:description" content="Chris Lusk is a developer, designer, and journalist." />
+  <meta property="og:image" content="/img/facebook-og.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
-                <!-- News Literacy 2016 -->
-                <div class="item">
-                    <a href="http://newsliteracy2016.com" target="_blank">
-                        <img src="img/newsliteracy2016.jpg" alt="News Literacy 2016 image" />
-                        <h3>News Literacy 2016</h3>
-                    </a>
-                    <p>An overview of 11 key trends that are changing journalism. Final project for graduate class at NYU.</p>
-                    <span class="skills">Skills</span>
-                    <ul class="tags">
-                        <li>HTML/CSS</li>
-                        <li>Javascript</li>
-                        <li>PHP</li>
-                        <li>WordPress</li>
-                        <li>Research</li>
-                        <li>Writing</li>
-                    </ul>
-                </div>
+  <!--[if IE]><link rel="shortcut icon" href="/favicon.ico"><![endif]-->
+  <link rel="shortcut icon" href="/favicon.png">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main-min.css">
+</head>
 
-                <!-- Score Scraper -->
-                <div class="item">
-                    <a href="https://github.com/chrismlusk/FMAA-bot" target="_blank">
-                        <img src="img/scorescraper.jpg" alt="Score Scraper image" />
-                        <h3>Score Scraper</h3>
-                    </a>
-                    <p>A program to scrape college basketball scores and post updates to Twitter. A side project to build experience.</p>
-                    <span class="skills">Skills</span>
-                    <ul class="tags">
-                        <li>Web Scraping</li>
-                        <li>Python</li>
-                        <li>API data</li>
-                    </ul>
-                </div>
+<body>
 
-                <!-- FCS Tailgating -->
-                <div class="item">
-                    <a href="http://www.fcstailgating.com/" target="_blank">
-                        <img src="img/fcstailgating.jpg" alt="image" />
-                        <h3>FCS Tailgating</h3>
-                    </a>
-                    <p>Website for a client launching a new business selling tailgating gear. Done while working for Accuraty Solutions.</p>
-                    <span class="skills">Skills</span>
-                    <ul class="tags">
-                        <li>HTML/CSS</li>
-                        <li>Javascript</li>
-                        <li>API integration</li>
-                    </ul>
-                </div>
+  <header class="mini-nav">
+      <a href="/">chrislusk.me</a>
+  </header>
 
-            </section>
+  <main>
 
-            <!-- archive -->
-            <section id="archive" class="wrapper">
-                <h2>Other work</h2>
-                <p>Before moving to digital, I was a print designer at various newsrooms. You can see examples of my work <a href="/_archive/v2/portfolio/" target="_blank">here</a>.</p>
-            </section>
+    <!-- project promos -->
+    <section id="projects" class="wrapper">
+      <h1>Recent projects</h1>
 
-        </main>
+      <!-- Friendship Madness -->
+      <div class="item">
+        <a href="http://friendshipmadness.com/" target="_blank">
+          <img src="img/friendshipmadness.jpg" alt="Friendship Madness image" />
+          <h3>Friendship Madness</h3>
+        </a>
+        <p>Some friends and I turn the NCAA basketball tournament into a silly joke each year. I built this site before the 2016 tournament.</p>
+        <span class="skills">Skills</span>
+        <ul class="tags">
+          <li>HTML/CSS</li>
+          <li>PHP</li>
+          <li>WordPress</li>
+          <li>Logo design</li>
+        </ul>
+      </div>
 
-        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script> -->
-        <!-- <script src="js/plugins.js"></script> -->
+      <!-- News Literacy 2016 -->
+      <div class="item">
+        <a href="http://newsliteracy2016.com" target="_blank">
+          <img src="img/newsliteracy2016.jpg" alt="News Literacy 2016 image" />
+          <h3>News Literacy 2016</h3>
+        </a>
+        <p>An overview of 11 key trends that are changing journalism. Final project for graduate class at NYU.</p>
+        <span class="skills">Skills</span>
+        <ul class="tags">
+          <li>HTML/CSS</li>
+          <li>PHP</li>
+          <li>WordPress</li>
+          <li>Javascript</li>
+          <li>Writing</li>
+        </ul>
+      </div>
 
-        <!-- Google Analytics -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-36986344-1','auto');ga('send','pageview');
-        </script>
-    </body>
+      <!-- Score Scraper -->
+      <div class="item">
+        <a href="https://github.com/chrismlusk/FMAA-bot" target="_blank">
+          <img src="img/scorescraper.jpg" alt="Score Scraper image" />
+          <h3>Score Scraper</h3>
+        </a>
+        <p>A program to scrape college basketball scores and post updates to Twitter. A side project to build experience.</p>
+        <span class="skills">Skills</span>
+        <ul class="tags">
+          <li>Web Scraping</li>
+          <li>Python</li>
+          <li>API data</li>
+        </ul>
+      </div>
+
+      <!-- FCS Tailgating -->
+      <div class="item">
+        <a href="http://www.fcstailgating.com/" target="_blank">
+          <img src="img/fcstailgating.jpg" alt="image" />
+          <h3>FCS Tailgating</h3>
+        </a>
+        <p>Website for a client launching a new business selling tailgating gear. Done while working for Accuraty Solutions.</p>
+        <span class="skills">Skills</span>
+        <ul class="tags">
+          <li>HTML/CSS</li>
+          <li>Javascript</li>
+          <li>API integration</li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- archive -->
+    <section id="archive" class="wrapper">
+      <h2>Other work</h2>
+      <p>Before moving to digital, I was a print designer at various newsrooms. You can see examples of my work <a href="/_archive/v2/portfolio/" target="_blank">here</a>.</p>
+    </section>
+  </main>
+
+  <!-- Google Analytics -->
+  <script>
+      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      e.src='https://www.google-analytics.com/analytics.js';
+      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      ga('create','UA-36986344-1','auto');ga('send','pageview');
+  </script>
+</body>
 </html>
