Update portfolio projects

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Chris Lusk | chrislusk.me" />
   <meta property="og:description" content="Chris Lusk is a developer, designer, and journalist." />
-  <meta property="og:image" content="/img/facebook-og.jpg" />
+  <meta property="og:image" content="http://chrislusk.me/assets/img/facebook-og.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
