--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Chris Lusk | chrislusk.me" />
   <meta property="og:description" content="Chris Lusk is a developer, designer, and journalist." />
-  <meta property="og:image" content="/img/facebook-og.jpg" />
+  <meta property="og:image" content="http://chrislusk.me/assets/img/facebook-og.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
@@ -34,48 +34,46 @@
 
     <!-- project promos -->
     <section id="projects" class="wrapper">
-      <h1>Recent projects</h1>
+      <h1>Selected projects</h1>
+
+      <!-- Illinois Law Review -->
+      <div class="item">
+        <a href="https://illinoislawreview.org/first-100-days/" target="_blank">
+          <img src="img/illinoislawreview.jpg" alt="Illinois Law Review screenshot" />
+          <h3>Illinois Law Review</h3>
+        </a>
+        <p>Rebuilt the Illinois Law Review website on WordPress, and also designed/developed a section to promote the publication's special symposium devoted to President Trump's first 100 days in office. A freelance project.</p>
+        <span class="skills">Skills</span>
+        <ul class="tags">
+          <li>HTML/CSS</li>
+          <li>WordPress</li>
+          <li>Animation</li>
+          <li>jQuery</li>
+        </ul>
+      </div>
 
       <!-- Friendship Madness -->
       <div class="item">
         <a href="http://friendshipmadness.com/" target="_blank">
-          <img src="img/friendshipmadness.jpg" alt="Friendship Madness image" />
+          <img src="img/friendshipmadness.jpg" alt="Friendship Madness screenshot" />
           <h3>Friendship Madness</h3>
         </a>
-        <p>Some friends and I turn the NCAA basketball tournament into a silly joke each year. I built this site before the 2016 tournament.</p>
+        <p>Some friends and I turn the NCAA basketball tournament into a silly joke each year. I built this site before the 2016 tournament and used the project as a chance to experiment with more custom development in WordPress. A side project.</p>
         <span class="skills">Skills</span>
         <ul class="tags">
-          <li>HTML/CSS</li>
-          <li>PHP</li>
           <li>WordPress</li>
+          <li>PHP</li>
           <li>Logo design</li>
-        </ul>
-      </div>
-
-      <!-- News Literacy 2016 -->
-      <div class="item">
-        <a href="http://newsliteracy2016.com" target="_blank">
-          <img src="img/newsliteracy2016.jpg" alt="News Literacy 2016 image" />
-          <h3>News Literacy 2016</h3>
-        </a>
-        <p>An overview of 11 key trends that are changing journalism. Final project for graduate class at NYU.</p>
-        <span class="skills">Skills</span>
-        <ul class="tags">
-          <li>HTML/CSS</li>
-          <li>PHP</li>
-          <li>WordPress</li>
-          <li>Javascript</li>
-          <li>Writing</li>
         </ul>
       </div>
 
       <!-- Score Scraper -->
       <div class="item">
         <a href="https://github.com/chrismlusk/FMAA-bot" target="_blank">
-          <img src="img/scorescraper.jpg" alt="Score Scraper image" />
+          <img src="img/scorescraper.jpg" alt="Score Scraper screenshot" />
           <h3>Score Scraper</h3>
         </a>
-        <p>A program to scrape college basketball scores and post updates to Twitter. A side project to build experience.</p>
+        <p>Looking to build something while I began learning Python, I built a program to scrape college basketball scores and post updates to Twitter. A side project to build experience.</p>
         <span class="skills">Skills</span>
         <ul class="tags">
           <li>Web Scraping</li>
@@ -84,18 +82,32 @@
         </ul>
       </div>
 
-      <!-- FCS Tailgating -->
+      <!-- News Literacy 2016 -->
       <div class="item">
-        <a href="http://www.fcstailgating.com/" target="_blank">
-          <img src="img/fcstailgating.jpg" alt="image" />
-          <h3>FCS Tailgating</h3>
+        <a href="http://newsliteracy2016.com" target="_blank">
+          <img src="img/newsliteracy2016.jpg" alt="News Literacy 2016 screenshot" />
+          <h3>News Literacy 2016</h3>
         </a>
-        <p>Website for a client launching a new business selling tailgating gear. Done while working for Accuraty Solutions.</p>
+        <p>An overview of 11 key trends that are changing journalism that was produced as a project for a graduate course at NYU. The professor mentioned he wanted the class to publish our research online, so I built a custom WordPress site to do so.</p>
         <span class="skills">Skills</span>
         <ul class="tags">
-          <li>HTML/CSS</li>
-          <li>Javascript</li>
-          <li>API integration</li>
+          <li>WordPress</li>
+          <li>PHP</li>
+          <li>Writing</li>
+        </ul>
+      </div>
+
+      <!-- Police Training Project -->
+      <div class="item">
+        <a href="https://mtu12.com" target="_blank">
+          <img src="img/policetraining.jpg" alt="Police Training Project screenshot" />
+          <h3>Police Training Project</h3>
+        </a>
+        <p>Designed and developed this WordPress site as a last-minute addition for a client at Accuraty Solutions.</p>
+        <span class="skills">Skills</span>
+        <ul class="tags">
+          <li>Graphic design</li>
+          <li>Rapid development</li>
         </ul>
       </div>
     </section>
@@ -103,7 +115,7 @@
     <!-- archive -->
     <section id="archive" class="wrapper">
       <h2>Other work</h2>
-      <p>Before moving to digital, I was a print designer at various newsrooms. You can see examples of my work <a href="/_archive/v2/portfolio/" target="_blank">here</a>.</p>
+      <p>Before moving to digital, I was a print designer at various newsrooms. You can see examples of my work <a href="/_archive/v1/portfolio/" target="_blank">here</a>.</p>
     </section>
   </main>
 
