--- a/projects.html
+++ b/projects.html
@@ -58,27 +58,13 @@
           <img src="img/friendshipmadness.jpg" alt="Friendship Madness screenshot" />
           <h3>Friendship Madness</h3>
         </a>
-        <p>Some friends and I turn the NCAA basketball tournament into a silly joke each year. I built this site before the 2016 tournament and used the project as a chance to experiment with more custom development in WordPress. A side project.</p>
+        <p>Some friends and I turn the NCAA basketball tournament into a silly joke* each year. Aside from the fact that this obviously needed a home on the internet, I built this site as a side project to improve my custom WordPress dev experience.</p>
+        <p><small>*Being a <a href="http://friendshipmadness.com/friends/chris-lusk/" target="_blank">three-time champion</a> is no laughing matter, however.</small></p>
         <span class="skills">Skills</span>
         <ul class="tags">
           <li>WordPress</li>
           <li>PHP</li>
           <li>Logo design</li>
-        </ul>
-      </div>
-
-      <!-- Score Scraper -->
-      <div class="item">
-        <a href="https://github.com/chrismlusk/FMAA-bot" target="_blank">
-          <img src="img/scorescraper.jpg" alt="Score Scraper screenshot" />
-          <h3>Score Scraper</h3>
-        </a>
-        <p>Looking to build something while I began learning Python, I built a program to scrape college basketball scores and post updates to Twitter. A side project to build experience.</p>
-        <span class="skills">Skills</span>
-        <ul class="tags">
-          <li>Web Scraping</li>
-          <li>Python</li>
-          <li>API data</li>
         </ul>
       </div>
 
@@ -94,6 +80,21 @@
           <li>WordPress</li>
           <li>PHP</li>
           <li>Writing</li>
+        </ul>
+      </div>
+
+      <!-- Score Scraper -->
+      <div class="item">
+        <a href="https://github.com/chrismlusk/FMAA-bot" target="_blank">
+          <img src="img/scorescraper.jpg" alt="Score Scraper screenshot" />
+          <h3>Score Scraper</h3>
+        </a>
+        <p>Looking to build something while I began learning Python, I built a program to scrape college basketball scores and post updates to Twitter. A side project to build experience.</p>
+        <span class="skills">Skills</span>
+        <ul class="tags">
+          <li>Web Scraping</li>
+          <li>Python</li>
+          <li>API data</li>
         </ul>
       </div>
 
