--- a/index.html
+++ b/index.html
@@ -1,14 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
+  <title>Chris Lusk | Web Developer</title>
+  <meta name="description" content="Chris Lusk is a web developer living and working in Chicago. This is his portfolio.">
 
-    <script src=""></script>
-  </body>
+  <meta property="og:url" content="http://www.chrislusk.me" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Chris Lusk | chrislusk.me" />
+  <meta property="og:description" content="Chris Lusk is a developer, designer, and journalist." />
+  <meta property="og:image" content="http://chrislusk.me/assets/img/facebook-og.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <link rel="stylesheet" href="assets/css/main.css">
+</head>
+<body>
+  <header>
+    <div class="wrapper">
+      <ul class="social-links">
+        <li>
+          <a href="https://twitter.com/chrismlusk" title="Twitter"><i class="fa fa-twitter"></i></a>
+        </li>
+        <li>
+          <a href="https://github.com/chrismlusk" title="Github"><i class="fa fa-github"></i></a>
+        </li>
+        <li>
+          <a href="https://facebook.com/chrismlusk" title="Facebook"><i class="fa fa-facebook"></i></a>
+        </li>
+      </ul>
+      <h1>Chris Lusk</h1>
+      <h3>Journalism. Design. Code.</h3>
+      <div class="info">
+        <p>You can see some of my <a href="projects.html">recent projects</a> here.</p>
+      </div>
+      <div class="corner top-left"></div>
+      <div class="corner top-right"></div>
+      <div class="corner bottom-left"></div>
+      <div class="corner bottom-right"></div>
+    </div>
+  </header>
+
+  <script src="assets/js/scripts.js"></script>
+</body>
 </html>
