--- a/projects.html
+++ b/projects.html
@@ -1,32 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Projects | Chris Lusk | chrislusk.me</title>
+  <title>Projects | Chris Lusk | Web Developer</title>
   <meta name="description" content="Chris Lusk is a web developer living and working in Chicago. This is his portfolio.">
 
   <meta property="og:url" content="http://www.chrislusk.me" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Chris Lusk | chrislusk.me" />
   <meta property="og:description" content="Chris Lusk is a developer, designer, and journalist." />
-  <meta property="og:image" content="http://chrislusk.me/assets/img/facebook-og.jpg" />
+  <meta property="og:image" content="http://chrislusk.me/assets/images/facebook-og.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
-  <!--[if IE]><link rel="shortcut icon" href="/favicon.ico"><![endif]-->
-  <link rel="shortcut icon" href="/favicon.png">
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main-min.css">
+  <link rel="stylesheet" href="assets/css/main.css">
 </head>
-
 <body>
 
   <header class="mini-nav">
-      <a href="/">chrislusk.me</a>
+    <a href="/">chrislusk.me</a>
   </header>
 
   <main>
@@ -38,7 +33,7 @@
       <!-- Illinois Law Review -->
       <div class="item">
         <a href="https://illinoislawreview.org/first-100-days/" target="_blank">
-          <img src="img/illinoislawreview.jpg" alt="Illinois Law Review screenshot" />
+          <img src="assets/images/illinoislawreview.jpg" alt="Illinois Law Review screenshot" />
           <h3>Illinois Law Review</h3>
         </a>
         <p>Rebuilt the Illinois Law Review website on WordPress, and also designed/developed a section to promote the publication's special symposium devoted to President Trump's first 100 days in office. A freelance project.</p>
@@ -54,7 +49,7 @@
       <!-- Friendship Madness -->
       <div class="item">
         <a href="http://friendshipmadness.com/" target="_blank">
-          <img src="img/friendshipmadness.jpg" alt="Friendship Madness screenshot" />
+          <img src="assets/images/friendshipmadness.jpg" alt="Friendship Madness screenshot" />
           <h3>Friendship Madness</h3>
         </a>
         <p>Some friends and I turn the NCAA basketball tournament into a silly joke* each year. Aside from the fact that this obviously needed a home on the internet, I built this site as a side project to improve my custom WordPress dev experience.</p>
@@ -70,7 +65,7 @@
       <!-- Score Scraper -->
       <div class="item">
         <a href="https://github.com/chrismlusk/FMAA-bot" target="_blank">
-          <img src="img/scorescraper.jpg" alt="Score Scraper screenshot" />
+          <img src="assets/images/scorescraper.jpg" alt="Score Scraper screenshot" />
           <h3>Score Scraper</h3>
         </a>
         <p>Looking to build something while I began learning Python, I built a program to scrape college basketball scores and post updates to Twitter. A side project to build experience.</p>
@@ -85,7 +80,7 @@
       <!-- News Literacy 2016 -->
       <div class="item">
         <a href="http://newsliteracy2016.com" target="_blank">
-          <img src="img/newsliteracy2016.jpg" alt="News Literacy 2016 screenshot" />
+          <img src="assets/images/newsliteracy2016.jpg" alt="News Literacy 2016 screenshot" />
           <h3>News Literacy 2016</h3>
         </a>
         <p>An overview of 11 key trends that are changing journalism that was produced as a project for a graduate course at NYU. The professor mentioned he wanted the class to publish our research online, so I built a custom WordPress site to do so.</p>
@@ -100,7 +95,7 @@
       <!-- Police Training Project -->
       <div class="item">
         <a href="https://mtu12.com" target="_blank">
-          <img src="img/policetraining.jpg" alt="Police Training Project screenshot" />
+          <img src="assets/images/policetraining.jpg" alt="Police Training Project screenshot" />
           <h3>Police Training Project</h3>
         </a>
         <p>Designed and developed this WordPress site as a last-minute addition for a client at Accuraty Solutions.</p>
